chore(group): change group to trader_v2
